syntax = "proto3";

package Greeter;

service GreeterService {
    rpc GetFeature(req) returns (res) {}
}

message req {
    int32 req_id = 1;
    oneof req_oneof {
        string req_name = 2;
        MessageA message_a = 3;
    }
}

message res {
    int32 res_id = 1;
    oneof res_oneof {
        string res_name = 2;
        MessageA message_a = 3;
    }
}

message MessageA {
    string data_a1 = 1;
}
